--- a/历史小测.md
+++ b/历史小测.md
@@ -1,17 +1,17 @@
-1. 1840年____爆发，根本原因是英国____，导火索是____  
-2.	鸦片战争政治上严重破坏中国   和   ;____经济开始解体，中国开始沦为________社会，鸦片战争成为____ 的开端。思想上刺激思想界开始出现向____学习的新思潮。
+1. 1840年____爆发，根本原因是英国____，导火索是____ 
+2.	鸦片战争政治上严重破坏中国____和____;____经济开始解体，中国开始沦为________社会，鸦片战争成为____的开端。思想上刺激思想界开始出现向____学习的新思潮。
 3.	第二次鸦片战争是中国的________程度进一步加深
 4.	____（事件）使太平天国由盛转衰
-5.	洋务运动前期以   为口号，创办____ ;后期为了____   ，以____为口号，创办   
-6.	洋务运动学习西方先进技术，创办了一批   工业和   工业，促进中国____的兴起，开启了____  ，客观上促进了中国____ 的产生。
-7.	1894年，____   爆发，在____中“致远舰”管带____壮烈牺牲
-8.	《马关条约》的签订，大大加深了中国社会的____   程度(最大影响)，帝国主义国家掀起了____  的狂潮，中国的民族危机空前严重，刺激了中华民族觉醒，掀起____   的新高潮。
-9.	康有为和梁启超发起了____   ，揭开变法运动的序幕
+5.	洋务运动前期以____为口号，创办____;后期为了____  ，以____为口号，创办____
+6.	洋务运动学习西方先进技术，创办了一批____工业和____工业，促进中国____的兴起，开启了____ ，客观上促进了中国____的产生。
+7.	1894年，____  爆发，在____中“致远舰”管带____壮烈牺牲
+8.	《马关条约》的签订，大大加深了中国社会的____  程度(最大影响)，帝国主义国家掀起了____ 的狂潮，中国的民族危机空前严重，刺激了中华民族觉醒，掀起____  的新高潮。
+9.	康有为和梁启超发起了____  ，揭开变法运动的序幕
 10.	戊戌变法主张改封建君主专制制度为________制度
 11.	八国联军侵华战争的直接目的____________
-12.	辛丑条约使中国完全沦为____________  社会，民族危机全面加深，清政府完全成为“________ ”
-13.	1905年，孙中山在____  成立中国同盟会，是第一个全国规模的________ 革命政党
+12.	辛丑条约使中国完全沦为____社会，民族危机全面加深，清政府完全成为“________”
+13.	1905年，孙中山在_____成立中国同盟会，是第一个全国规模的________革命政党
 14.	辛亥革命的性质：____________
-15.	辛亥革命推翻了____   ， 结束了________，建立了________  ，推动了中国____  近代化
-16.	袁世凯窃取了____   的果实
-17.	袁世凯死后，________  分裂，中国陷入________ 的斗争中
+15.	辛亥革命推翻了____  ， 结束了________，建立了，推动了中国____ 近代化
+16.	袁世凯窃取了____  的果实
+17.	袁世凯死后，分裂，中国陷入________的斗争中
