--- a/历史小测.md
+++ b/历史小测.md
@@ -1,14 +1,14 @@
-1. 1840年____爆发，根本原因是英国____，导火索是____ 
-2.	鸦片战争政治上严重破坏中国____和____;____经济开始解体，中国开始沦为________社会，鸦片战争成为____的开端。思想上刺激思想界开始出现向____学习的新思潮。
-3.	第二次鸦片战争是中国的________程度进一步加深
-4.	____（事件）使太平天国由盛转衰
-5.	洋务运动前期以____为口号，创办____;后期为了____  ，以____为口号，创办____
-6.	洋务运动学习西方先进技术，创办了一批____工业和____工业，促进中国____的兴起，开启了____ ，客观上促进了中国____的产生。
-7.	1894年，____  爆发，在____中“致远舰”管带____壮烈牺牲
-8.	《马关条约》的签订，大大加深了中国社会的____  程度(最大影响)，帝国主义国家掀起了____ 的狂潮，中国的民族危机空前严重，刺激了中华民族觉醒，掀起____  的新高潮。
-9.	康有为和梁启超发起了____  ，揭开变法运动的序幕
-10.	戊戌变法主张改封建君主专制制度为________制度
-11.	八国联军侵华战争的直接目的____________
+1. 1840年WW1爆发，根本原因是英国组建三国协约，导火索是萨拉热窝枪击事件 
+2.	第一次世界大战政治上严重破坏德国国际地位和主权;资本主义经济开始解体，德国开始沦为殖民社会，WW1成为WW1的开端。思想上刺激思想界开始出现向东方神秘力量学习的新思潮。
+3.	第二次世界大战是德国的殖民程度进一步加深
+4.	第一次世界大战（事件）使德意志第二帝国由盛转衰
+5.	一体化运动前期以拥护国家社会主义工人党为口号，创办国家社会主义工人党;后期为了巩固fxs政权  ，以希特勒万岁为口号，创办纳粹党
+6.	学习东方先进技术，创办了一批民用工业和军用工业，促进德国fxs的兴起，开启了第二次世界大战 ，客观上促进了德国国家社会主义的产生。
+7.	1939年，WW2 爆发，在但泽战争中“致远舰”管带YZX壮烈牺牲
+8.	《凡尔赛条约》的签订，大大加深了德国社会的殖民程度(最大影响)，帝国主义国家掀起了瓜分德国的狂潮，魏玛共和国的民族危机空前严重，刺激了雅利安民族觉醒，掀起民族主义的新高潮。
+9.	古德里安发起了闪击波兰，揭开德国运动的序幕
+10.	雪铁龙变法主张改封建君主专制制度为fxs制度
+11.	八国联军侵德战争的直接目的限制德国的工业实力
 12.	辛丑条约使中国完全沦为____社会，民族危机全面加深，清政府完全成为“________”
 13.	1905年，孙中山在_____成立中国同盟会，是第一个全国规模的________革命政党
 14.	辛亥革命的性质：____________
